syntax = "proto3";

option java_package = "package1";
option java_multiple_files = true;
option java_outer_classname = "outerClass1";

service CovidFree{	
	rpc risk_calculator(symptoms) returns (risk);
	rpc covid_history(userId) returns (hadCovid);
}

message symptoms{
	string symptom1 = 1;
	string symptom2 = 2;
}

message risk{
	int32  risk = 1;
}

message userId{
	int32 id = 1;
}

message hadCovid{
	string hadC = 1;
}